@@ -39,6 +39,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc4210.suite',
      'tests.test_rfc4211.suite',
      'tests.test_rfc4334.suite',
+     'tests.test_rfc4387.suite',
      'tests.test_rfc4985.suite',
      'tests.test_rfc5035.suite',
      'tests.test_rfc5083.suite',
