@@ -7,6 +7,7 @@ Revision 0.3.0, released XX-11-2019
 - Add RFC5126 providing CMS Advanced Electronic Signatures (CAdES)
 - Removed support for EOL Pythons 2.4, 2.5, 2.6, 3.2, 3.3 and 3.4.
 - Improve test routines for RFC5126
+- Add RFC4387 providing Certificate Store Access via HTTP
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
